Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]

** Incompatible changes:

  - 'badargs.format' now formats message with the word "arguments" for
    all ordinal values except exactly 1, where "argument" is used.
    Previously, Specl erroneously used "argument" for ordinal values of
    less than or equal to 1.


* Noteworthy changes in release 13 (2014-10-04) [stable]

** New features:

  - Specl's own modules, and modules loaded from spec-file directories
    are now loaded inside the function environment of the running
    example, and so have access to Specl's Lua extensions, such as
    `expect` and matchers.

  - `inprocess.capture` returns a `Process` object, suitable for
    matching using the `specl.shell` matchers.

  - New `to_raise` matcher as an alias for `to_error` to avoid flagging
    capitalised error messages in error matcher argument with Slingshot
    sanity checks.

  - New programmatic `examples` function for building example groups and
    helper functions directly in Lua, whenever YAML starts to get in the
    way.  See documentation for examples.

  - New `specl.badargs` module provides `format` to generate standard
    argument error messages that can be passed to matchers to ensure
    correct error message formatting:

        expect (posix.write ()).to_raise (format ("write", 1, "int"))

    And `diagnose`, which writes a full set of expectations to check all
    missing, extraneous and badly typed arguments are diagnosed
    correctly:

        - context with bad arguments:
            badargs.diagnose (posix.write "(int, string)")

** Incompatible changes:

  - `inprocess.capture` returns a `Process`, not a pair of strings
    and the call results. Call results are still available in the array
    part of the returned `Process`.

  - Specl now requires latest stdlib v40 to be installed on the module
    path, rather than carrying its own copies of parts of stdlib it wants
    to use.
